# Dewey

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
Dewey/: constants.py  functions.py
dewey/: functions.py
