[tool.poetry]
name = "dewey"
version = "0.1.0"
description = ""
authors = ["Erick <efm.physics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.181"
pinecone-client = "^2.2.1"
openai = "^0.27.7"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
