[tool.poetry]
name        = "dewey"
version     = "1.0.0"
description = ""
authors     = ["Erick <efm.physics@gmail.com>"]
readme      = "README.md"

[tool.poetry.dependencies]
python              = ">=3.10,<3.14"   # langchain-pinecone supports <3.14

streamlit           = "^1.34"
langchain           = "^0.3"           # 0.3.25 is latest
langchain-community = "^0.3.24"        # released 12 May 2025 :contentReference[oaicite:0]{index=0}
langchain-openai    = "^0.3.17"        # pairs with langchain-core 0.3
langchain-pinecone  = "^0.2.6"         # requires pinecone 6.x
pinecone            = "^6.0.0"         # 6.0.x is current stable line :contentReference[oaicite:1]{index=1}
openai              = "^1.23"
tiktoken            = "^0.9"           # ≥0.7 needed by langchain-openai :contentReference[oaicite:2]{index=2}
pypdf               = "^3.16"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
